--- a/EqUiWebUi/Areas/Welding/Views/WM/_jobBreakdown1.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/_jobBreakdown1.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IQueryable<EqUiWebUi.Areas.Welding.Models.rt_job_breakdown1>
 
-@Html.Grid(Model).Named("breakdownGrid").Build(columns =>
+@Html.Grid(Model).Named("breakdownGrid1").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id");
     columns.Add(c => c.index).Titled("index");
