--- a/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
@@ -24,9 +24,15 @@
         }
         @*voorbeeld interne link*@
         <p>
-            <a href="~/Alert/Alert/AASPOTIndex" class="btn btn-primary btn-sm">Alerts &raquo;</a>
+            <a href="~/Alert/Alert/AASPOTIndex" class="btn btn-primary btn-sm">Aro Technician Alerts &raquo;</a>
             Cylinder/SBCU data triggers
         </p>
+        <p>
+            <a href="~/Welding/Welding/_alertsAASPOT" class="btn btn-primary btn-sm">WeldingT Alerts &raquo;</a>
+            WeldingTeam Supervision Alerts
+        </p>
+
+
     </div>
 </div>
 <p></p>
