--- a/EqUiWebUi/Areas/Welding/Views/WM/_rt_job1.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/_rt_job1.cshtml
@@ -1,12 +1,8 @@
 ﻿@model IQueryable<EqUiWebUi.Areas.Welding.Models.rt_job11>
 
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
 
 
-@Html.Grid(Model).Named("_rt_job").Build(columns =>
+@Html.Grid(Model).Named("_rt_job11").Build(columns =>
 {
     columns.Add(c => c.id).Titled("Job_id");
     columns.Add(c => c.c_timer.Name).Titled("TimerName");
@@ -14,16 +10,14 @@
     columns.Add(c => c.ts_End).Titled("EndJob");
     columns.Add(c => c.rt_expulsion_count).Titled("AantalSpatters");
     columns.Add(c => c.rt_weldfaultprot_count).Titled("AantalWeldfaults");
-    columns.Add(c => c.rt_breakdown_count).Titled("AantalBreakdowns");
-    columns.Add(c => (c.rt_weldmeasureprotddw_count != c.rt_weldmeasureprotddw_distinct) ? true : false).Titled("CountWelds").Filterable(true);
-    //
-    columns.Add(c => c.rt_job_breakdown.Where(b => b.index == 1).FirstOrDefault().rt_alarm.dateTime).Titled("FirstErrdateTime");
-    columns.Add(c => c.rt_job_breakdown.Where(b => b.index == 1).FirstOrDefault().rt_alarm.errorCode1).Titled("FirstErrcode");
-    columns.Add(c => c.rt_job_breakdown.Where(b => b.index == 1).FirstOrDefault().rt_alarm.errorCode1_txt).Titled("FirstErrTxt");
+   columns.Add(c => c.rt_breakdown_count).Titled("AantalBreakdowns");
+    columns.Add(c => c.rt_job_breakdown.Where(b => b.index == 1).FirstOrDefault().rt_alarm.errorCode1_txt).Titled("error");
+ 
+   
 
 }).Filterable().Sortable().Pageable(pager =>
 {
-    pager.RowsPerPage = 15;
+    pager.RowsPerPage = 20;
     pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
     pager.ShowPageSizes = true;
 }).Empty("Did not find anything").Css("table-hover")
@@ -36,7 +30,7 @@
         $("#allcontent").removeClass("container");
 
         //subscribe to row clicked events
-        $('[data-name="_rt_job"]').mvcgrid({
+        $('[data-name="_rt_job11"]').mvcgrid({
             rowClicked: function (row, data, e) {
                 //if row already has this clase close the modal
                 if ($(row).hasClass("bg-info")) {
@@ -53,15 +47,15 @@
                 //animation
                 $("#placeholderPartial").html("<i class='fas fa-spinner fa-spin fa-2x'></i>");
                 //load url in placeholder
-                var url = "@Url.Action("_jobdetails")?id=" + data["id"];
+                var url = "@Url.Action("_jobdetails1")?id=" + data["id"];
                 $("#placeholderPartial").load(url);
             }
         });
 
         //if only one row open automatic
-        if ($('[data-name="_rt_job"]>table>tbody>tr').length == 1) {
+        if ($('[data-name="_rt_job11"]>table>tbody>tr').length == 1) {
 
-            $('[data-name="_rt_job"]>table>tbody>tr:first').trigger('click');
+            $('[data-name="_rt_job11"]>table>tbody>tr:first').trigger('click');
         }
     </script>
 }
