--- a/EqUiWebUi/Areas/Welding/Views/Qteam/rt_AutoWorkFlowULPlans.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/rt_AutoWorkFlowULPlans.cshtml
@@ -14,9 +14,9 @@
     //.Encoded(false)
     // .RenderedAs(c => "<div class='bg-danger'>Test</div>");
     columns.Add(c => c.Planlenght).Titled("Planlenght");
-    columns.Add(c => c.Last30min_productionStatus).Titled("Last30min_productionStatus").Css("bolded"); ;
-    columns.Add(c => c.BuildBody).Titled("BuildBody").InitialSort(GridSortOrder.Desc);
-    columns.Add(c => c.WorkGroup).Titled("WorkGroup");
+    columns.Add(c => c.Last30min_productionStatus).Titled("Last30min_productionStatus").Css("bolded"); 
+    columns.Add(c => c.BuildBody).Titled("BuildBodys").InitialSort(GridSortOrder.Desc);
+  
 
 }).Filterable().Pageable(pager =>
 {
@@ -63,11 +63,6 @@
 
             </script>
 
-            <style>
-                .red {
-                    background-color: #d26161
-                }
-            </style>
-
+      
      
 }
