small change tableau

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -173,7 +173,7 @@
             Opvolging van kosten beschermingsmiddelen per team
         </p>
         <p>
-            <a href="~/tableau/Embedded4K?workbook=Equi_HOP_MalfunctionAnalysis_AFG&sheet=4KHOPAnalysis" class="btn btn-primary btn-sm">4KHOPAnalysis &raquo;</a>
+            <a href="~/tableau/Embedded4K?workbook=GADownTimeAnalysis&sheet=1_GADownTimeAnalysis" class="btn btn-primary btn-sm">GADownTimeAnalysis &raquo;</a>
             A-Shop downtime Analysis
         </p>
         <p>
