--- a/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
@@ -62,8 +62,8 @@
     </div>
     <p>
     <p>
- <a href="~/Welding/WM/empty" class="btn btn-primary btn-sm">test&raquo;</a>
-      ---under contruction---
+ <a href="~/Alert/Alert/Listalerts?h_alert-c_triggers.alert-type-contains=ULrapport&h_alert-rows=20" class="btn btn-primary btn-sm"> pss en spot positie alert &raquo;</a>
+     
 
 
 </div>
