--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                         </li>
                         <li class="dropdown-divider"></li>
                         <li class="dropdown-item">
-                            <a href="http://gensvw1178.gen.volvocars.net/EqUi_DigibordLauncher/EqUiDigibordLauncher.application">Start DigibordLauncher</a>
+                            <a href="http://gensvw1178.gen.volvocars.net/EqUi_DigibordLauncher/EqUiDigibordLauncher.application">Start DigiboardLauncher</a>
                             <a href="@Url.Action("ShowWiki", "Wikis", new { area = "", id = 4 }, null)"><i class="fas fa-question-circle text-primary"></i></a>
                         </li>
                         <li class="dropdown-divider"></li>
@@ -44,7 +44,7 @@
                             <a href="https://sway.com/csCS9cdjEpcpPhw0?ref=Link">VSTO Excel (Manual)</a>
                         </li>
                         <li class="dropdown-item">
-                            <a href="\\gnlsnm0101.gen.volvocars.net\proj\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE\ExcelAddInEquipmentDatabase.vsto">VSTO Excel (instal)</a>
+                            <a href="\\gnlsnm0101.gen.volvocars.net\proj\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE\ExcelAddInEquipmentDatabase.vsto">VSTO Excel (install)</a>
                             <a href="@Url.Action("ShowWiki", "Wikis", new { area = "", id = 5 }, null)"><i class="fas fa-question-circle text-primary"></i></a>
                         </li>
                         <li class="dropdown-divider"></li>
