--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -81,7 +81,7 @@
 
         <p>
             <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=ObjectTreeWithTrend" class="btn btn-primary btn-sm">Tree (FaultLevel) &raquo;</a>
-            Aantal storingen per fout + trent grafiek
+            Aantal storingen per fout + trend grafiek
         </p>
 
         <p>
@@ -117,7 +117,7 @@
             <a href="~/tableau/EmbeddedDesktop?workbook=AvailabilityMap&sheet=Dash" class="btn btn-warning btn-sm">Beschikbaarheid &raquo;</a>
             Opvolging beschikbaarheid (Stations niveau)
         </p>
-        <p class="text-muted">*Dit systeem update nog NIET automaitsch en is in beta</p>
+        <p class="text-muted">*Dit systeem update nog NIET automatisch en is in beta</p>
 
         <p>
             <a href="~/tableau/EmbeddedDesktop?workbook=RobotCycleTime&sheet=CTrobot" class="btn btn-primary btn-sm">CTrobot &raquo;</a>
@@ -173,7 +173,7 @@
             Opvolging van kosten beschermingsmiddelen per team
         </p>
         <p>
-            <a href="~/tableau/Embedded4K?workbook=GADownTimeAnalysis&sheet=1_GADownTimeAnalysis" class="btn btn-primary btn-sm">GADownTimeAnalysis &raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=GADownTimeAnalysis&sheet=1_GADownTimeAnalysis" class="btn btn-primary btn-sm">GADownTimeAnalysis &raquo;</a>
             A-Shop downtime Analysis
         </p>
         <p>
