--- a/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
@@ -102,15 +102,18 @@
 <div class="card">
     <div class="card-header bg-danger">
         <h5 class="card-title text-white">
-            Beta
+            Rapport and Config
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body" style="display:none">
 
         <p>
-            <a href="~/PJV/pjv/index" class="btn btn-primary btn-sm">PJV&raquo;</a>(test)
-            Test met pjv UI
+            <a href="~/PJV/pjv/index" class="btn btn-primary btn-sm">Rapport&raquo;</a>
+            PJV
+        <p>
+            <a href="~/Welding/Welding/_AlertsUserRapport" class="btn btn-primary btn-sm">alerts Rapport&raquo;</a>
+           AlertsUser Rapport
         </p>
 
     </div>
