--- a/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/WM/Index.cshtml
@@ -25,7 +25,7 @@
     <p></p>
     @MyHtmlHelpers.EquiLink("/Alert/Alert/Listalerts?h_alert-c_state.state-not-equals=TECHCOMP&h_alert-info-contains=QSTOP%20warning&h_alert-rows=20", "far fa-file-alt", "QstopWarnings", helperText: "Pro Actief Qstops vermijden ")
     <p></p>
-    @MyHtmlHelpers.EquiLink("/Welding/WM/", "far fa-file-alt", "SpatterAlerts ---under construction---", helperText: "Spatters met melding productie ")
+    @MyHtmlHelpers.EquiLink("/Welding/Spatter/Index", "far fa-file-alt", "SpatterPage ", helperText: "Spatters and spikes follow up ")
     <p></p>
     @MyHtmlHelpers.EquiLink("/Alert/Alert/Listalerts?h_alert-c_triggers.alert-type-contains=Dalert&h_alert-rows=20", "far fa-file-alt", " All D alerts ", helperText: "Follow up all D alerts")
     <p></p>
