--- a/EqUiWebUi/Areas/user_management/Views/users/Details.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/Details.cshtml
@@ -38,6 +38,15 @@
 
         <dd>
             @Html.DisplayFor(model => model.ResponsibleArea)
+            @if (Model.ResponsibleAreaLocations != null)
+             {
+                <ul class="text-muted">
+                    @foreach (string item in Model.ResponsibleAreaLocations)
+                     {
+                      <li>@item</li>
+                     }
+                </ul>
+             }
         </dd>
 
         <dt>
