ugly as fuck implementation of responsibility

--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -48,7 +48,6 @@
             Defrap_GA_Last_24Hrs
         </p>
 
-        <p class="text-muted">*Als de 'maximo' tools in tableau niet automatisch laden. (chrome) ga naar <a href="https://gensvw1178.gen.volvocars.net/"> equi &raquo;</a>en klik daar op 'advanced' proceed.</p>
     </div>
 </div>
 
@@ -63,18 +62,18 @@
     </div>
     <div class="card-body">
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=LineLayout_Breakdown" class="btn btn-warning btn-sm">LineLevelLayout&raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=LineLayout_Breakdown" class="btn btn-warning btn-sm">LineLayout&raquo;</a>
             Line layout met aantal storingen
         </p>
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=StationLayout_Breakdown" class="btn btn-warning btn-sm">StationLevelLayout&raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=StationLayout_Breakdown" class="btn btn-warning btn-sm">StationLayout&raquo;</a>
             Station layout met aantal storingen
         </p>
 
 
         <p>
-            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=AssetLayout_Breakdown" class="btn btn-warning btn-sm">AssetLevelLayout&raquo;</a>
+            <a href="~/tableau/EmbeddedDesktop?workbook=Breakdowns&sheet=AssetLayout_Breakdown" class="btn btn-warning btn-sm">AssetLayout&raquo;</a>
             Asset layout met aantal storingen + error trent grafiek
         </p>
 
