--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -24,10 +24,10 @@
 @helper ChangeAlertStatus(int alertId, string currentState)
     {
         <div class="dropdown">
-            <button class="btn btn-xs btn-danger dropdown-toggle" type="button" data-toggle="dropdown">
+            <button class="btn btn-sm btn-danger dropdown-toggle" type="button" data-toggle="dropdown">
                 @currentState <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu ">
                 @{
                     foreach (EqUiWebUi.Areas.Alert.Models.alertState state in System.Enum.GetValues(typeof(EqUiWebUi.Areas.Alert.Models.alertState)))
                     {
