--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
@@ -52,6 +52,15 @@ else
                 </div>
 
                 <div class="form-group">
+                    @Html.LabelFor(model => model.alertGroup, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.alertGroup, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.alertGroup, "", new { @class = "text-danger" })
+                        @Html.HelpTextFor(model => model.alertGroup)
+                    </div>
+                </div>
+
+                <div class="form-group">
                     @Html.LabelFor(model => model.alertType, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.alertType, new { htmlAttributes = new { @class = "form-control" } })
