changes for wo details

--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/Index.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/Index.cshtml
@@ -18,7 +18,7 @@
         <p></p>
 
         <p>
-            <a href="~/Maximo_ui/WorkorderDetails/WoParentDetails?parentwonum=10324886" class="btn btn-primary btn-sm">Workoderdetails inc Childeren &raquo;</a>
+            <a href="~/Maximo_ui/WorkorderDetails/SubWoDetails?parentwonum=11297661" class="btn btn-primary btn-sm">Workoderdetails for Childeren &raquo;</a>
             Workoderdetails wo =10324886 (test)
         </p>
     </div>
