--- a/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/SubWoDetails.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/WorkorderDetails/SubWoDetails.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EqUiWebUi.WebGridHelpers.DefaultModel
 @{
-    ViewBag.Title = "WoParentDetails";
+    ViewBag.Title = "SubWoDetails";
 }
 <h4>WoDetails @ViewBag.parentwonum (inc childeren)</h4>
 
@@ -10,7 +10,7 @@
     @*run on doc ready *@
     $(document).ready(function () {
         $("#woDetailsPartial").html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-2x fa-fw'></i><span class='sr-only'></span>Loading....</div>");
-        var url = "@Url.Action("_woParentDetails", "WorkorderDetails")?parentwonum=" + @ViewBag.parentwonum + "&RealtimeConn=" + @ViewBag.RealtimeConn.ToString().ToLower();
+        var url = "@Url.Action("_SubWoDetails", "WorkorderDetails")?parentwonum=" + @ViewBag.parentwonum + "&RealtimeConn=" + @ViewBag.RealtimeConn.ToString().ToLower();
         $("#woDetailsPartial").load(url);
     })
 </script>
