--- a/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTAlertList.cshtml
@@ -32,9 +32,9 @@
                           .Encoded(false)
                           .Filterable(false)
                           .Sortable(false)
-                          //gefoefel om de tool id er uit te halen! Dit kan falen als er geen 'gun:' in de omschrijving zit dus is ROMMEL code
+                          //gefoefel om de tool id er uit te halen! 
                           //in de laatste versie is het niet meer gun:x maar gunx (het alarmobject) vandaar de replace
-                          .RenderedAs(c => MyEquiToolkit.SbcuTool(c.location, c.info.Replace(":", "").Substring(c.info.IndexOf("gun"), 5).Replace("gun", "")));
+                          .RenderedAs(c => c.info.Contains("gun") ? MyEquiToolkit.SbcuTool(c.location, c.info.Replace(":", "").Substring(c.info.IndexOf("gun"), 5).Replace("gun", "")).ToString() : "");
 
     //add filterbutton
     columns.Add(c => c)
