--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -14,31 +14,28 @@
 
 @Html.Grid(Model).Named("h_alert").Build(columns =>
 {
-    columns.Add(c => c.id).Titled("id").Filterable(true);
+    columns.Add(c => c.id).Titled("id").Css("d-none");
+    columns.Add(c => c.c_triggers.alertType).Titled("Type").Filterable(true);
     columns.Add(c => c.location).Titled("location").Filterable(true).MultiFilterable(true);
     columns.Add(c => c.lastTriggerd).Titled("timestamp").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
     columns.Add(c => c.info).Titled("info");
     columns.Add(c => c.ChangedUser.username.Replace(@"VCCNET\", "")).Titled("ChangedUser");
     columns.Add(c => c.triggerCount).Titled("TC").Filterable(true);
-    //render dropdown to set alert status
+    //change state
     columns.Add(c => c.c_state.state)
                    .Titled("State")
                    .Encoded(false)
                    .Filterable(true)
                    .RenderedAs(c => MyFilters.ChangeAlertStatus(c.id, c.c_state.state));
 
-    //add filterbutton
+    //tools
     columns.Add(c => c)
                         .Titled("")
                         .Encoded(false)
-                        .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Listalerts", new { Location = c.location }), "fas fa-filter", "", "Filter alerts for this location")
-                        ).Filterable(false);
-
-    //add edit button
-    columns.Add(c => c)
-                        .Titled("")
-                        .Encoded(false)
-                        .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this alert")
+                        .RenderedAs(c =>
+                        MyFilters.IconActionLink(Url.Action("Listalerts", new { Location = c.location }), "fas fa-filter", "", "Filter alerts for this location").ToHtmlString() +     //add filterbutton
+                        MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this alert").ToHtmlString() +    //add edit button
+                        (c.info.Contains("gun") ? MyEquiToolkit.SbcuTool(c.location, c.info.Replace(":", "").Substring(c.info.IndexOf("gun"), 5).Replace("gun", "")).ToHtmlString() : "")  //launch sbcu tool (if needed)
                         ).Filterable(false);
 
 }).Filterable().Sortable().Pageable(pager =>
