change set alert state to  inline edit

--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -20,6 +20,8 @@
         </select>
 }
 
+
+@*DEPREVIATED! replacing with inline edit*@
 @*helper to change alter status users in ALERT ALERT*@
 @helper ChangeAlertStatus(int alertId, string currentState)
     {
